gui - compile